Weld cleanup - Part 2
General cleanup - varibable names, de-Yoda, formatting, javadoc, missing
@Override, etc.

Signed-off-by: arjantijms <arjan.tijms@gmail.com>